Generators pass, more pass replacements