@@ -6,14 +6,17 @@ import net.minecraft.core.Vec3i;
 import net.minecraft.util.Tuple;
 import net.minecraft.world.inventory.MenuType;
 import net.minecraft.world.item.BucketItem;
-import net.minecraft.world.item.Items;
+import net.minecraft.world.item.crafting.RecipeType;
 import net.minecraft.world.level.Level;
 import net.minecraft.world.level.block.state.BlockState;
+import net.neoforged.neoforge.registries.datamaps.builtin.NeoForgeDataMaps;
+import net.neoforged.neoforge.transfer.item.ItemResource;
+import net.neoforged.neoforge.transfer.transaction.Transaction;
 import rearth.oritech.block.base.entity.UpgradableGeneratorBlockEntity;
 import rearth.oritech.client.init.ModScreens;
 import rearth.oritech.config.OritechConfig;
 import rearth.oritech.init.BlockEntitiesContent;
-import rearth.oritech.init.recipes.OritechRecipeType;
+import rearth.oritech.init.recipes.OritechRecipe;
 import rearth.oritech.init.recipes.RecipeContent;
 import rearth.oritech.util.ContainerSlotAssignment;
 
@@ -24,12 +27,12 @@ import java.util.Set;
 public class BasicGeneratorEntity extends UpgradableGeneratorBlockEntity {
     
     public BasicGeneratorEntity(BlockPos pos, BlockState state) {
-        super(BlockEntitiesContent.BASIC_GENERATOR_ENTITY, pos, state, OritechConfig.generators.basicGeneratorData.energyPerTick.get());
+        super(BlockEntitiesContent.BASIC_GENERATOR_ENTITY.get(), pos, state, OritechConfig.generators.basicGeneratorData.energyPerTick.get());
     }
     
     @Override
-    protected OritechRecipeType getOwnRecipeType() {
-        return RecipeContent.BIO_GENERATOR;
+    protected RecipeType<OritechRecipe> getOwnRecipeType() {
+        return RecipeContent.BIO_GENERATOR.get();
     }
     
     @Override
@@ -38,21 +41,22 @@ public class BasicGeneratorEntity extends UpgradableGeneratorBlockEntity {
     }
     
     @Override
-    protected void consumeInput() {
-        var firstItem = this.getInputView().get(0);
-        if (firstItem.isEmpty() || firstItem.getItem() instanceof BucketItem) return;
+    protected boolean consumeInput(Transaction transaction) {
+        var firstItem = this.getInputView().getFirst();
+        if (firstItem.isEmpty() || firstItem.getItem() instanceof BucketItem) return false;
         
-        var fuelTime = FuelRegistry.get(firstItem);
-        if (fuelTime > 0) {
-            if (firstItem.getItem() instanceof BucketItem) {
-                this.getInputView().set(0, Items.BUCKET.getDefaultInstance());
-            } else {
-                firstItem.shrink(1);
-            }
-            progress = fuelTime;
-            setCurrentMaxBurnTime(fuelTime);
-            setChanged();
-        }
+        var data = firstItem.typeHolder().getData(NeoForgeDataMaps.FURNACE_FUELS);
+        if (data == null || data.burnTime() <= 0) return false;
+        
+        var fuelTime = data.burnTime();
+        
+        var removed = inventory.getInputContainer().extract(0, ItemResource.of(firstItem), 1, transaction);
+        if (removed != 1) return false;
+        
+        progress.set(fuelTime);
+        currentMaxBurnTime = fuelTime;
+        
+        return true;
     }
     
     @Override
@@ -83,7 +87,7 @@ public class BasicGeneratorEntity extends UpgradableGeneratorBlockEntity {
     
     @Override
     public MenuType<?> getScreenHandlerType() {
-        return ModScreens.BASIC_GENERATOR_SCREEN;
+        return ModScreens.BASIC_GENERATOR_SCREEN.get();
     }
     
     @Override
